--- a/Ejemplo_8/package.json
+++ b/Ejemplo_8/package.json
@@ -11,6 +11,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "html-webpack-plugin": "^4.0.3",
     "vue": "^2.6.11",
     "webpack": "^4.42.1",
     "webpack-cli": "^3.3.11"
