--- a/vuestart/package.json
+++ b/vuestart/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": ".babelrc.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "serve": "webpack-dev-server --mode development"
   },
   "keywords": [],
   "author": "",
